k8's/5.react_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-deployment
  namespace: project-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: react-app
  template:
    metadata:
      labels:
        app: react-app
    spec:
      containers:
        - name: react-container
          image: nithingowda46/notes-app:19-front
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP

          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
