k8's/2.django_service.yml
apiVersion: v1
kind: Service
metadata:
  name: django-service
  namespace: project-2
spec:
  selector:
    app: notes-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
