k8's/6.mysql_service.yml
kind: Service
apiVersion: v1
metadata:
  name: mysqldb-notes
  namespace: project-2
spec:
  selector:
    app: notes-mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  clusterIP: None
