k8's/react_service.yml
apiVersion: v1
kind: Service
metadata:
  name: react-service
  namespace: project-2
spec:
  selector:
    app: react-app
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
