k8's/8.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notesapp-ingress
  namespace: project-2
spec:
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: django-service
            port:
              number: 8000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: react-service
            port:
              number: 3000
